# fastapi_shop

./: .env.dist  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/dah/: main.py
src/dah/bootstrap/: config.py  ioc.py
src/dah/domain/common/: entities.py
src/dah/domain/service/: exceptions.py
src/dah/domain/services/: entities.py  service.py  value_objects.py
src/dah/infrastructure/persistence/migrations/: env.py
src/dah/infrastructure/persistence/migrations/versions/: 6284c48046fc_initial_migration.py
src/dah/presentation/http/v1/common/: setup_routes.py
src/dah/presentation/http/v1/routes/: catalog.py  healthcheck.py  jinja2.py
src/dah/presentation/http/v1/routes/frontend/static/: styles.css
src/dah/presentation/http/v1/routes/frontend/templates/: base.html  index.html
src/dah/presentation/http/v1/routes/frontend/templates/catalog/: index.html
